# EDC_2025-master

./: .gitignore
detector/: CMakeLists.txt  package.xml
detector/include/detector/: corner_detector.hpp  detector_node.hpp  pnp_solver.hpp
detector/launch/: detector.launch.py
detector/src/: corner_detector.cpp  detector_node.cpp  pnp_solver.cpp
interfaces/: CMakeLists.txt  package.xml
interfaces/msg/: CenterDelta.msg  Gimbal.msg
rm_serial_driver/: CMakeLists.txt  package.xml
rm_serial_driver/config/: serial_driver.yaml
rm_serial_driver/include/rm_serial_driver/: packet.hpp  rm_serial_driver_node.hpp
rm_serial_driver/src/: rm_serial_driver_node.cpp
rm_vision/rm_vision_bringup/: CMakeLists.txt  package.xml
rm_vision/rm_vision_bringup/config/: camera_info.yaml  launch_params.yaml  node_params.yaml
rm_vision/rm_vision_bringup/launch/: detector.launch.py
ros2_mindvision_camera/config/: camera_info.yaml  camera_params.yaml
ros2_mindvision_camera/src/: mv_camera_node.cpp
